--- a/html-css/module-10/css/styles.css
+++ b/html-css/module-10/css/styles.css
@@ -21,7 +21,6 @@ input[type="radio"].visually-hidden {
 .body {font-family: "Montserrat", sans-serif;}
 .link {text-decoration: none;}
 .link, .btn, .btn--nav-bar {cursor: pointer;}
-*:hover {transition: all 0.8s;}
 
 .list {
     margin: 0;
@@ -65,6 +64,8 @@ input[type="radio"].visually-hidden {
 }
 
 .nav-bar__item:hover .nav-bar__link::after {background: #fce38a;}
+
+.nav-bar__item:hover .nav-bar__link::after, .nav-bar__item:hover .nav-bar__link, .nav-bar__logo:hover, .cta:hover, .team-item:hover .socials, .team-item:hover .team-item__wrapper, .socials__item:hover .socials__icon, .socials__item:hover .socials__link, .back-button:hover {transition: all 0.8s;}
 .nav-bar__link {
     display: inline-block;
     min-width: 80px;
