--- a/html-css/module-10/css/styles.css
+++ b/html-css/module-10/css/styles.css
@@ -13,6 +13,8 @@ input[type="radio"].visually-hidden {
 
     white-space: nowrap;
 
+    -webkit-clip-path: inset(100%);
+
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
@@ -30,17 +32,27 @@ input[type="radio"].visually-hidden {
 /*HEADER*/
 
 .header {
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     height: 1000px;
     margin-bottom: 46px;
     padding-top: 28px;
+    background: -webkit-gradient(linear, left bottom, left top, from(rgba(252, 227, 138, .9)), to(rgba(243, 129, 129, .9))), url("../img/background/background.jpg") center no-repeat;
+    background: -webkit-linear-gradient(bottom, rgba(252, 227, 138, .9) 0%, rgba(243, 129, 129, .9) 100%), url("../img/background/background.jpg") center no-repeat;
+    background: -o-linear-gradient(bottom, rgba(252, 227, 138, .9) 0%, rgba(243, 129, 129, .9) 100%), url("../img/background/background.jpg") center no-repeat;
     background: linear-gradient(to top, rgba(252, 227, 138, .9) 0%, rgba(243, 129, 129, .9) 100%), url("../img/background/background.jpg") center no-repeat;
     color: #ffffff;
 }
 
 .nav-bar, .nav-bar__menu, .features-list, .team-list, .socials__link, .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -53,7 +65,11 @@ input[type="radio"].visually-hidden {
 .nav-bar__item {padding-top: 13px;}
 
 .nav-bar__item, .nav-bar__item--btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     text-transform: uppercase;
 }
@@ -65,7 +81,7 @@ input[type="radio"].visually-hidden {
 
 .nav-bar__item:hover .nav-bar__link::after {background: #fce38a;}
 
-.nav-bar__item:hover .nav-bar__link::after, .nav-bar__item:hover .nav-bar__link, .nav-bar__logo:hover, .cta:hover, .team-item:hover .socials, .team-item:hover .team-item__wrapper, .socials__item:hover .socials__icon, .socials__item:hover .socials__link, .back-button:hover {transition: all 0.8s;}
+.nav-bar__item:hover .nav-bar__link::after, .nav-bar__item:hover .nav-bar__link, .nav-bar__logo:hover, .cta:hover, .team-item:hover .socials, .team-item:hover .team-item__wrapper, .socials__item:hover .socials__icon, .socials__item:hover .socials__link, .back-button:hover {-webkit-transition: all 0.8s;-o-transition: all 0.8s;transition: all 0.8s;}
 .nav-bar__link {
     display: inline-block;
     min-width: 80px;
@@ -165,10 +181,11 @@ input[type="radio"].visually-hidden {
     margin: 40px auto;
 }
 
-.features-list {flex-wrap: wrap;}
+.features-list {-ms-flex-wrap: wrap;flex-wrap: wrap;}
 
 .features-list__item {
     position: relative;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     width: 330px;
     padding-left: 60px;
@@ -255,14 +272,22 @@ input[type="radio"].visually-hidden {
 }
 
 .team-item:hover .team-item__wrapper {
+    -webkit-transform: translate(-10px, -10px);
+    -ms-transform: translate(-10px, -10px);
     transform: translate(-10px, -10px);
+    -webkit-box-shadow: #95e1d3 10px 10px;
     box-shadow: #95e1d3 10px 10px;
 }
 
 .team-item:hover .socials {opacity: 1;}
 .socials {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
     align-items: flex-start;
 
     position: absolute;
@@ -273,13 +298,22 @@ input[type="radio"].visually-hidden {
     height: 470px;
     padding: 200px 80px;
 
+    background: -webkit-gradient(linear, left bottom, left top, from(rgba(251, 227, 137, 0.9)), to(rgba(243, 129, 129, 0.9)));
+
+    background: -webkit-linear-gradient(bottom, rgba(251, 227, 137, 0.9), rgba(243, 129, 129, 0.9));
+
+    background: -o-linear-gradient(bottom, rgba(251, 227, 137, 0.9), rgba(243, 129, 129, 0.9));
+
     background: linear-gradient(to top, rgba(251, 227, 137, 0.9), rgba(243, 129, 129, 0.9));
     opacity: 0;
     font-size: 0;
 }
 
 .socials__link {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     width: 56px;
     height: 56px;
@@ -314,9 +348,10 @@ input[type="radio"].visually-hidden {
 }
 
 .copy__link {color: #f38181;}
-.subscribe {display: flex;}
+.subscribe {display: -webkit-box;display: -ms-flexbox;display: flex;}
 
 .subscribe__email {
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     width: 230px;
     height: 40px;
@@ -346,6 +381,7 @@ input[type="radio"].visually-hidden {
     height: 60px;
     border-radius: 50%;
     background-color: #555555;
+    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12), 0 3px 1px -2px rgba(0, 0, 0, .2);
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12), 0 3px 1px -2px rgba(0, 0, 0, .2);
     text-align: center;
     line-height: 60px;
