--- a/html-css/module-06/css/styles.css
+++ b/html-css/module-06/css/styles.css
@@ -3,440 +3,434 @@
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
-    position: absolute;
-
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-
-    white-space: nowrap;
-
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+	position:    absolute;
+	width:       1px;
+	height:      1px;
+	margin:      -1px;
+	border:      0;
+	padding:     0;
+	white-space: nowrap;
+	clip-path:   inset(100%);
+	clip:        rect(0 0 0 0);
+	overflow:    hidden;
 }
 
 body {
-    font-family: "Montserrat", sans-serif;
+	font-family: "Montserrat", sans-serif;
 }
 
 ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+	list-style: none;
+	margin:     0;
+	padding:    0;
 }
 
 a {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 /*HEADER*/
 
 header {
-    width: 1200px;
-    margin: 40px auto 100px;
+	width:  1200px;
+	margin: 40px auto 100px;
 }
 
 nav {
-    display: flex;
-    justify-content: space-between;
+	display:         flex;
+	justify-content: space-between;
 }
 
 .logo {
-    font-size: 30px;
-    color: #95e1d3;
-    font-weight: bold;
+	font-size:   30px;
+	color:       #95e1d3;
+	font-weight: bold;
 }
 
 .nav-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-width: 500px;
+	display:         flex;
+	justify-content: space-between;
+	align-items:     center;
+	min-width:       500px;
 }
 
 .nav-bar li {
-    text-align: center;
+	text-align: center;
 }
 
 .nav-bar a {
-    font-size: 14px;
-    color: #95e1d3;
-    text-transform: uppercase;
+	font-size:      14px;
+	color:          #95e1d3;
+	text-transform: uppercase;
 }
 
 .nav-bar li::after {
-    display: block;
-    content: '';
-    width: 50px;
-    height: 3px;
-    margin-top: 5px;
-    background-color: transparent;
+	display:          block;
+	content:          '';
+	width:            50px;
+	height:           3px;
+	margin-top:       5px;
+	background-color: transparent;
 }
 
 .nav-bar li:hover > a {
-    color: #f38181;
+	color: #f38181;
 }
 
 .nav-bar li:hover::after {
-    content: '';
-    width: 50px;
-    height: 3px;
-    background-color: #f38181;
+	content:          '';
+	width:            50px;
+	height:           3px;
+	background-color: #f38181;
 }
 
 /*WE WORK WITH*/
 
 .we-work-with {
-    width: 1200px;
-    margin: 0 auto;
+	width:  1200px;
+	margin: 0 auto;
 }
 
 .we-work-with > p {
-    margin: 0;
-    font-size: 24px;
-    color: rgb(51, 51, 51);
-    font-family: "Kaushan Script";
-    text-align: center;
+	margin:      0;
+	font-size:   24px;
+	color:       rgb(51, 51, 51);
+	font-family: "Kaushan Script";
+	text-align:  center;
 }
 
 .we-work-with > h2 {
-    margin: 0 auto 60px;
-    font-size: 30px;
-    color: rgb(51, 51, 51);
-    text-align: center;
-    text-transform: uppercase;
+	margin:         0 auto 60px;
+	font-size:      30px;
+	color:          rgb(51, 51, 51);
+	text-align:     center;
+	text-transform: uppercase;
 }
 
 .we-work-with > h2::after {
-    display: block;
-    content: '';
-    width: 60px;
-    height: 3px;
-    background-color: #f38181;
-    margin: 40px auto;
+	display:          block;
+	content:          '';
+	width:            60px;
+	height:           3px;
+	background-color: #f38181;
+	margin:           40px auto;
 }
 
 .services {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+	display:         flex;
+	justify-content: space-between;
+	flex-wrap:       wrap;
 }
 
 .services li {
-    position: relative;
-    box-sizing: border-box;
-    width: 330px;
-    padding-left: 60px;
+	position:     relative;
+	box-sizing:   border-box;
+	width:        330px;
+	padding-left: 60px;
 }
 
 .services li:nth-last-child(-n + 3) {
-    margin-bottom: 100px;
+	margin-bottom: 100px;
 }
 
 .services li::before {
-    content: '';
-    display: block;
-    width: 33px;
-    height: 33px;
-    position: absolute;
-    top: 14px;
-    left: 15px;
+	content:  '';
+	display:  block;
+	width:    33px;
+	height:   33px;
+	position: absolute;
+	top:      14px;
+	left:     15px;
 }
 
 .services li:nth-child(1)::before {
-    background-image: url("../img/icons/alarm.png");
-    width: 32px;
-    height: 32px;
+	background-image: url("../img/icons/alarm.png");
+	width:            32px;
+	height:           32px;
 }
 
 .services li:nth-child(2)::before {
-    background-image: url("../img/icons/line_graph.png");
-    width: 33px;
-    height: 33px;
+	background-image: url("../img/icons/line_graph.png");
+	width:            33px;
+	height:           33px;
 }
 
 .services li:nth-child(3)::before {
-    background-image: url("../img/icons/computer.png");
-    width: 32px;
-    height: 29px;
+	background-image: url("../img/icons/computer.png");
+	width:            32px;
+	height:           29px;
 }
 
 .services li:nth-child(4)::before {
-    background-image: url("../img/icons/book.png");
-    width: 32px;
-    height: 32px;
+	background-image: url("../img/icons/book.png");
+	width:            32px;
+	height:           32px;
 }
 
 .services li:nth-child(5)::before {
-    background-image: url("../img/icons/home.png");
-    width: 32px;
-    height: 31px;
+	background-image: url("../img/icons/home.png");
+	width:            32px;
+	height:           31px;
 }
 
 .services li:nth-child(6)::before {
-    background-image: url("../img/icons/frame.png");
-    width: 34px;
-    height: 32px;
+	background-image: url("../img/icons/frame.png");
+	width:            34px;
+	height:           32px;
 }
 
 .services li:not(:nth-last-child(-n + 3)) {
-    margin-bottom: 100px;
+	margin-bottom: 100px;
 }
 
 .services__title {
-    font-size: 14px;
-    color: rgb(51, 51, 51);
-    text-transform: uppercase;
+	font-size:      14px;
+	color:          rgb(51, 51, 51);
+	text-transform: uppercase;
 }
 
 .services__descr {
-    font-size: 15px;
-    line-height: 24px;
-    color: rgb(153, 153, 153);
-    font-family: "Roboto";
+	font-size:   15px;
+	line-height: 24px;
+	color:       rgb(153, 153, 153);
+	font-family: "Roboto";
 }
 
 /*WHO WE ARE*/
 
 .who-we-are {
-    width: 1200px;
-    margin: 0 auto;
+	width:  1200px;
+	margin: 0 auto;
 }
 
 .who-we-are > p {
-    margin: 0;
-    font-size: 24px;
-    color: rgb(51, 51, 51);
-    font-family: "Kaushan Script";
-    text-align: center;
+	margin:      0;
+	font-size:   24px;
+	color:       rgb(51, 51, 51);
+	font-family: "Kaushan Script";
+	text-align:  center;
 }
 
 .who-we-are > h2 {
-    margin: 0 auto 60px;
-    font-size: 30px;
-    color: rgb(51, 51, 51);
-    text-align: center;
-    text-transform: uppercase;
+	margin:         0 auto 60px;
+	font-size:      30px;
+	color:          rgb(51, 51, 51);
+	text-align:     center;
+	text-transform: uppercase;
 }
 
 .who-we-are > h2::after {
-    display: block;
-    content: '';
-    width: 60px;
-    height: 3px;
-    background-color: #f38181;
-    margin: 40px auto;
+	display:          block;
+	content:          '';
+	width:            60px;
+	height:           3px;
+	background-color: #f38181;
+	margin:           40px auto;
 }
 
 p.who-we-are__descr {
-    width: 930px;
-    margin: 0 auto 90px;
-    font-size: 15px;
-    line-height: 24px;
-    color: rgb(153, 153, 153);
-    font-family: "Roboto";
-    text-align: center;
+	width:       930px;
+	margin:      0 auto 90px;
+	font-size:   15px;
+	line-height: 24px;
+	color:       rgb(153, 153, 153);
+	font-family: "Roboto";
+	text-align:  center;
 }
 
 .our-team {
-    display: flex;
-    justify-content: space-between;
+	display:         flex;
+	justify-content: space-between;
 }
 
 .member__wrapper {
-    position: relative;
-    height: 470px;
+	position: relative;
+	height:   470px;
 }
 
 .member:hover .member__wrapper {
-    transform: translate(-10px, -10px);
-    box-shadow: #95e1d3 10px 10px;
+	transform:  translate(-10px, -10px);
+	box-shadow: #95e1d3 10px 10px;
 }
 
 .member:hover .socials {
-    opacity: 1;
+	opacity: 1;
 }
 
 .socials {
-    display: flex;
-    box-sizing: border-box;
-    align-items: flex-start;
-
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    width: 380px;
-    height: 470px;
-    padding: 200px 80px;
-
-    background: linear-gradient(to top, rgba(251, 227, 137, 0.9), rgba(243, 129, 129, 0.9));
-    opacity: 0;
-    font-size: 0;
+	display:     flex;
+	box-sizing:  border-box;
+	align-items: flex-start;
+	position:    absolute;
+	top:         0;
+	left:        0;
+	width:       380px;
+	height:      470px;
+	padding:     200px 80px;
+	background:  linear-gradient(to top, rgba(251, 227, 137, 0.9), rgba(243, 129, 129, 0.9));
+	opacity:     0;
+	font-size:   0;
 }
 
 .socials a {
-    position: relative;
-    display: block;
-    box-sizing: border-box;
-    width: 56px;
-    height: 56px;
-    background: #fce38a;
+	position:   relative;
+	display:    block;
+	box-sizing: border-box;
+	width:      56px;
+	height:     56px;
+	background: #fce38a;
 }
 
 .socials li:nth-child(-n + 3) > a {
-    border-right: 1px solid #f9bd86;
+	border-right: 1px solid #f9bd86;
 }
 
 .socials li:hover:nth-child(-n + 3) > a {
-    border-right: 1px solid #b9bcb3;
+	border-right: 1px solid #b9bcb3;
 }
 
 .socials li:hover > a {
-    background: #95e1d3;
+	background: #95e1d3;
 }
 
 .socials a::before {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+	content:   '';
+	display:   block;
+	position:  absolute;
+	top:       50%;
+	left:      50%;
+	transform: translate(-50%, -50%);
 }
 
 .socials li:nth-child(1) > a::before {
-    background: url("../img/icons/social/facebook.png");
-    width: 13px;
-    height: 26px;
+	background: url("../img/icons/social/facebook.png") no-repeat center;
+	width:      13px;
+	height:     26px;
 }
 
 .socials li:nth-child(2) > a::before {
-    background: url("../img/icons/social/twitter.png");
-    width: 26px;
-    height: 22px;
+	background: url("../img/icons/social/twitter.png") no-repeat center;
+	width:      26px;
+	height:     22px;
 }
 
 .socials li:nth-child(3) > a::before {
-    background: url("../img/icons/social/pinterest.png");
-    width: 21px;
-    height: 26px;
+	background: url("../img/icons/social/pinterest.png") no-repeat center;
+	width:      21px;
+	height:     26px;
 }
 
 .socials li:nth-child(4) > a::before {
-    background: url("../img/icons/social/instagram.png");
-    width: 26px;
-    height: 26px;
+	background: url("../img/icons/social/instagram.png") no-repeat center;
+	width:      26px;
+	height:     26px;
 }
 
 .member__name {
-    font-size: 14px;
-    color: rgb(51,51,51);
-    text-align: center;
-    text-transform: uppercase;
+	font-size:      14px;
+	color:          rgb(51, 51, 51);
+	text-align:     center;
+	text-transform: uppercase;
 }
 
 .member__position {
-    font-size: 15px;
-    line-height: 24px;
-    color: rgb(153,153,153);
-    font-family: "Roboto";
-    font-style: italic;;
-    text-align: center;
+	font-size:   15px;
+	line-height: 24px;
+	color:       rgb(153, 153, 153);
+	font-family: "Roboto";
+	font-style:  italic;;
+	text-align:  center;
 }
 
 /*FOOTER*/
 
 footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 1200px;
-    height: 70px;
-    margin: auto;
-    border-top: 1px solid #e5e5e5;
+	display:         flex;
+	justify-content: space-between;
+	align-items:     center;
+	width:           1200px;
+	height:          70px;
+	margin:          auto;
+	border-top:      1px solid #e5e5e5;
 }
 
 footer p {
-    font-size: 14px;
-    text-align: center;
-    color: #333333;
+	font-size:  14px;
+	text-align: center;
+	color:      #333333;
 }
 
 footer a {
-    color: #f38181;
+	color: #f38181;
 }
 
 form {
-    display: flex;
+	display: flex;
 }
 
 .email {
-    box-sizing: border-box;
-    width: 230px;
-    height: 40px;
-    background-color: #ffffff;
-    border: 1px solid #e7e7e7;
-    font-family: "Roboto";
-    font-style: italic;
-    font-size: 15px;
-    line-height: 24px;
+	box-sizing:       border-box;
+	width:            230px;
+	height:           40px;
+	background-color: #ffffff;
+	border:           1px solid #e7e7e7;
+	font-family:      "Roboto";
+	font-style:       italic;
+	font-size:        15px;
+	line-height:      24px;
 }
 
 .subscribe {
-    width: 150px;
-    height: 40px;
-    background: #95e1d3;
-    border: none;
-    font-size: 14px;
-    color: #ffffff;
-    font-weight: bold;
-    text-align: center;
-    text-transform: uppercase;
+	width:          150px;
+	height:         40px;
+	background:     #95e1d3;
+	border:         none;
+	font-size:      14px;
+	color:          #ffffff;
+	font-weight:    bold;
+	text-align:     center;
+	text-transform: uppercase;
 }
 
 /*BACK HOME*/
 
 .back-button,
 .task-button {
-    text-decoration: none;
-    color: #b0b8b9;
-    position: fixed;
-    bottom: 50px;
-    right: 50px;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background-color: #555555;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12), 0 3px 1px -2px rgba(0,0,0,.2);
-    text-align: center;
-    line-height: 60px;
-    transition: right 0.5s, bottom 0.7s;
+	text-decoration:  none;
+	color:            #b0b8b9;
+	position:         fixed;
+	bottom:           50px;
+	right:            50px;
+	width:            60px;
+	height:           60px;
+	border-radius:    50%;
+	background-color: #555555;
+	box-shadow:       0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12), 0 3px 1px -2px rgba(0, 0, 0, .2);
+	text-align:       center;
+	line-height:      60px;
+	transition:       right 0.5s, bottom 0.7s;
 }
 
 .task-button:hover {
-    background-color: #717171;
-    color: #ffffff;
+	background-color: #717171;
+	color:            #ffffff;
 }
 
 .back-button {
-    z-index: 1;
+	z-index: 1;
 }
 
 .task-button {
 }
 
 .back-button:hover {
-    background-color: #717171;
-    color: #ffffff;
+	background-color: #717171;
+	color:            #ffffff;
 }
 
 .back-button:hover + .task-button,
 .task-button:hover {
-    transition: right 0.3s, bottom 0.3s;
-    right: 95px;
-    bottom: 30px;
+	transition: right 0.3s, bottom 0.3s;
+	right:      95px;
+	bottom:     30px;
 }
